fix mobile spacing

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -55,5 +55,6 @@ footer {
 
   section.product-list > div {
     grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
   }
 }
